8.3.1 (17-03-2022)
- Bug Fix: Throw exception with the error description, when a value cannot be translated in tuition payment plan rule condition

8.3.0 (16-03-2022)
- Refactor: Mark ExemptionsGenerationRowResult::exemptedAmount as deprecated and replace with ExemptionsGenerationRowResult::netExemptedAmount
- Improvement: Global setting to enable/disable academic debt generation rules periodic execution
- Improvement: Support callbacks for each academic debt generation rule execution. An example of callback is the progress bar to trigger the execution in UI
- Improvement: Filter execution of academic debt generation rules, by type and execution year

8.2.5 (07-03-2022)
- Bug fix: Remove RC module version dependency
- Refactor: Mark TreasuryExemption::valueToExempt as deprecated and replace with TreasuryExemption.netAmountToExempt
- Refactor: Mark DebitEntry::exemptedAmount as deprecated and replace with DebitEntry::netExemptedAmount

8.2.4 (19-02-2022)
- Improvement: Export documentObservations and documentTermsAndConditions in report
- Improvement: In reports export the personal email

8.2.3 (26-01-2022)
- Bug Fix: Add missing exception labels
- Bug Fix: Throw correct exception, to translate the message in presentation
- Bug Fix: Fix person fiscal number validation, in person customer creation
- Improvement: Export observations and termsAndConditions fields of settlement note

8.2.2 (04-01-2022)
- Bug Fix: In close debts academic debt generation rules, check if degree curricular plan, active in registration in the execution year, is in the list of DCPs associated with the rule  

8.2.1 (06-12-2021)
- Improvement: Add academic treasury event type
- Bug Fix: Check of AcademicTariff.maximumAmount is not negative

8.2.0 (19-11-2021)
- Improvement: Throw exception when create a person customer to a person already with person customer
- Bug Fix: Only write ingressionType if it is set in the registration